@@ -1,9 +1,10 @@
 libeh-printf TODO
 
-* currently the private header is installed in $PREFIX/include but it should
-  only be used at compile time
-
 * the linux specific code is included in the build... I suspect there is an
   autotools way to only include it if it if we are building on linux
 
-* eh_printf() does not support %f ... maybe it should?
+* eh_printf() does not support %f very well, need to add zero padding and
+  decimal place specification
+
+* the functions "double ceil(double x)" and "double log10(double x)" require
+  the "#include <math.h>" .... would be nice to break this requirement
